--- a/ssm/src/main/webapp/WEB-INF/web.xml
+++ b/ssm/src/main/webapp/WEB-INF/web.xml
@@ -21,7 +21,10 @@
 		<load-on-startup>1</load-on-startup>
 		
 	</servlet>
-	
+	<servlet-mapping>
+        <servlet-name>dispatcherServlet</servlet-name>
+        <url-pattern>*.do</url-pattern>
+    </servlet-mapping>
 	
 	<servlet-mapping>
 		<servlet-name>dispatcherServlet</servlet-name>
