--- a/ssm/src/main/webapp/WEB-INF/web.xml
+++ b/ssm/src/main/webapp/WEB-INF/web.xml
@@ -65,6 +65,16 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	
+	
+	<filter>
+		<filter-name>HttpPutFormContentFilter</filter-name>
+		<filter-class>org.springframework.web.filter.HttpPutFormContentFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>HttpPutFormContentFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
 	    <welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 		<welcome-file>index.htm</welcome-file>
