--- a/ssm/.classpath
+++ b/ssm/.classpath
@@ -15,12 +15,13 @@
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/commons-fileupload-1.3.1.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/commons-io-2.4.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/ueditor-1.1.2.jar" sourcepath="C:/Users/赖红/Desktop/Blog/src/main/webapp/WEB-INF/lib/ueditor-1.1.2.jar"/>
-	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jxls-core-1.0.2.jar"/>
-	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/ssstool.jar" sourcepath="src/main/webapp/WEB-INF/lib/ssstool.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jxls-core-1.0.2.jar" sourcepath="src/main/webapp/WEB-INF/lib/jxls-core-1.0.2.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/ssstool.jar" sourcepath="C:/apache-tomcat-7.0.75/webapps/ssm/WEB-INF/lib/ssstool.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jxls-reader-1.0.2.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/commons-jexl-2.0.1.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/json-lib-2.4-jdk15.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/mail.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/commons-digester-1.5.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
